<resources>
    <string name="app_name">Math Challenge</string>
    <string name="enter_message">Enter your Name</string>
    <string name="title_txt">Math Challenge</string>
    <string name="login_btn_txt">Log in</string>
    <string name="sign_in_btn_txt">Sign In</string>
    <string name="name_title_txt">Player</string>
    <string name="operation_title_txt">Operacion:</string>
    <string name="answer_txt">"?"</string>
    <string name="password_txt">Password</string>
    <string name="name_txt">Name</string>
    <string name="last_name_txt">Last Name</string>
    <string name="mail_txt">email</string>
    <string name="submit_txt">Submit</string>
</resources>
